initial production release

--- a/index.html
+++ b/index.html
@@ -274,12 +274,11 @@
         <div class="grve-element grve-icon-box grve-align-center grve-animated-item fadeIn" data-delay="200">
             <div class="grve-icon"><img src="images/icons/aqua/bulb.png" alt="ideas"/></div>
             <div class="grve-box-content">
-                <a href="#"><h4 class="grve-box-title">Some Heading</h4></a>
+                <a href="#"><h4 class="grve-box-title">Who we are</h4></a>
 
                 <p>
-                    We thoroughly validate ideas to ensure they are solutions to pertinent problems and more importantly
-                    people are willing to pay for the solution
-                    <!--We apply lean methodologies, which equate to talking to customers early and very often to clearly define the problem-->
+                    Ofamfa Lab is a startup foundry (Incubator)
+                    And venture capital (Accelerator)  firm based in Accra, Ghana.
                 </p>
             </div>
         </div>
@@ -295,10 +294,9 @@
         <div class="grve-element grve-icon-box grve-align-center grve-animated-item fadeIn" data-delay="400">
             <div class="grve-icon"><img src="images/icons/aqua/pen.png" alt="design"></div>
             <div class="grve-box-content">
-                <a href="#"><h4 class="grve-box-title">Clean MVPs</h4></a>
+                <a href="#"><h4 class="grve-box-title">What we do</h4></a>
 
-                <p>After validation we build an MVP; A bare minimum version of the product used to begin acquiring
-                    customers and testing the revenue model.</p>
+                <p>We create, nurture, and Invest in early stage businesses in consumer markets, education, infrastructure, agriculture and media sectors.</p>
             </div>
         </div>
         <!-- End Icon Box -->
@@ -313,12 +311,9 @@
         <div class="grve-element grve-icon-box grve-align-center grve-animated-item fadeIn" data-delay="600">
             <div class="grve-icon"><img src="images/icons/aqua/bubble.png" alt="support"></div>
             <div class="grve-box-content">
-                <a href="#"><h4 class="grve-box-title">Outstanding Support</h4></a>
+                <a href="#"><h4 class="grve-box-title">Our Ethos</h4></a>
 
-                <p>If the MVP further validates the business model, we step up the growth marketing and transition to
-                    scaling up the product and service offerings.
-                    <!--We provide Mentors, Legal support and Business Development training for our portfolio companies. -->
-                </p>
+                <p>Our passion is working alongside “thinking-doers” to birth ideas and build them into leading companies that push the African society forward</p>
             </div>
         </div>
         <!-- End Icon Box -->
@@ -333,10 +328,9 @@
         <div class="grve-element grve-icon-box grve-align-center grve-animated-item fadeIn" data-delay="800">
             <div class="grve-icon"><img src="images/icons/aqua/like.png" alt="ready"></div>
             <div class="grve-box-content">
-                <a href="#"><h4 class="grve-box-title">Ready to Go</h4></a>
+                <a href="#"><h4 class="grve-box-title">Our Vision</h4></a>
 
-                <p>We are aligned with external investors and VCs with interests in Africa and prepare our portfolio
-                    companies for funding</p>
+                <p>To help ensure that no brilliant Sub Saharan Africa business dream dies.</p>
             </div>
         </div>
         <!-- End Icon Box -->
@@ -554,7 +548,7 @@
                 <img src="images/portfolio-carousel/01-560x300.jpg" alt="image">
                     <!--
                 <figcaption>
-                    <span class="grve-hover-title">His altera tamquam</span>
+                    <span class="grve-hover-title">som altera tamquam</span>
                     <span class="grve-hover-subtitle">Category Name</span>
                     <a class="grve-btn grve-btn-line grve-btn-extrasmall" href="#">view project</a>
                 </figcaption>
