update contact to add uk address

--- a/contact.html
+++ b/contact.html
@@ -169,10 +169,14 @@
                     <!-- Single Image Align Center -->
 
                     <!-- Text -->
-                    <h4 class="grve-align-center"><a href="mailto:info@ofamfalab.com">info@ofamfalab.com</a></h4>
+                    <h4 class="grve-align-center"><a href="mailto:tech@ofamfalab.com">tech@ofamfalab.com</a></h4>
 
-                    <p class="grve-align-center">25 Sobukwe Road, Farrar Avenue,<br>Adabraka, Accra, Ghana</p>
-                    <p class="grve-align-center">Tel: +233(302) 200163, +233(20) 5530086</p>
+                    <p class="grve-align-center">82 Northcliffecourt, Kempton Walk, CR0 7XF <br>London, United Kingdom
+                    <br>Tel: +44 (203) 6542277</p>
+                    <!-- End Text -->
+
+                    <p class="grve-align-center">25 Sobukwe Road, Farrar Avenue,<br>Adabraka, Accra, Ghana
+                    <br>Tel: +233(302) 200163, +233(20) 5530086</p>
                     <!-- End Text -->
 
                 </div>
@@ -182,11 +186,12 @@
                 <div class="grve-column-1-2">
 
                     <!-- Text -->
-                    <h4>Our Philosophy</h4>
+                    <h4>We are waiting to hear from you!</h4>
 
-                    <p>Laoreet meliore moderatius ea mel. In maiorum gloriatur deseruisse ius. Congue albucius
+                    <p hidden>Laoreet meliore moderatius ea mel. In maiorum gloriatur deseruisse ius. Congue albucius
                         scripserit ad nam. Fabulas placerat omittantur id has, te sed eius integre vivendo. Primis
                         intellegebat et eos. Errem quando iracundia ea vel.</p>
+                    <p>Send us an email, fill the form below or call us.</p>
                     <!-- End Text -->
 
                     <!-- Form -->
